--- a/provoice_home_bill.html
+++ b/provoice_home_bill.html
@@ -794,6 +794,10 @@
                     <label for="jornayaLeadId">Jornaya Lead ID</label>
                     <input type="text" class="form-control" id="jornayaLeadId" name="jornayaLeadId">
                 </div>
+                 <div class="form-group col-md-12">
+                    <label for="trusted">Trusted Form</label>
+                    <input type="text" class="form-control" id="trusted" name="trusted">
+                </div>
             </div>
             <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
