Updated API links in all HTML files

--- a/SS_DEBT_forthCRM_sept.html
+++ b/SS_DEBT_forthCRM_sept.html
@@ -155,7 +155,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://dk495.github.io/ApiJS/SS_DEBT_forthCRM_sept.js"></script>
+<script src="https://js.formifyweb.com/SS_DEBT_forthCRM_sept.js"></script>
  <!-- Custom script for form submission and notification -->
    <script>
         document.addEventListener("contextmenu", function (e) {
