--- a/ppc_pingpost.html
+++ b/ppc_pingpost.html
@@ -78,7 +78,7 @@
         })();
     </script>
 
-   <script src="https://dk495.github.io/ApiJS/ppc_pingpost.js"></script>
+   <script src="https://js.formifyweb.com/ppc_pingpost.js"></script>
 
 </body>
 </html>
