--- a/provoice_home_bill.html
+++ b/provoice_home_bill.html
@@ -803,6 +803,6 @@
         </form>
         <div id="alertContainer" class="mt-4"></div>
     </div>
-    <script src="https://dk495.github.io/ApiJS/provoice_home_bill.js"></script>
+    <script src="https://js.formifyweb.com/provoice_home_bill.js"></script>
 </body>
 </html>
