--- a/AgentAvialibilitycheck_TDLV.html
+++ b/AgentAvialibilitycheck_TDLV.html
@@ -43,7 +43,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/AgentAvialibilitycheck_TDLVBaker.js"></script>
+  <script src="https://js.formifyweb.com/AgentAvialibilitycheck_TDLVBaker.js"></script>
 
     
 
