--- a/ApiForm_newJune.html
+++ b/ApiForm_newJune.html
@@ -124,7 +124,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <!-- Custom script for form submission and notification -->
-  <script src="https://dk495.github.io/ApiJS/ApiForm_newJuneBaker.js"></script>
+  <script src="https://js.formifyweb.com/ApiForm_newJuneBaker.js"></script>
   <script>
     document.addEventListener("contextmenu", function (e) {
       e.preventDefault(); // Prevent the context menu from appearing
