--- a/HMC_medicareCHecker.html
+++ b/HMC_medicareCHecker.html
@@ -37,7 +37,7 @@
     </form>
 </div>
 
-<script src="https://dk495.github.io/ApiJS/HMC_whitelistchecker.js"></script>
+<script src="https://js.formifyweb.com/HMC_whitelistchecker.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
