--- a/SSDI_TD.html
+++ b/SSDI_TD.html
@@ -120,7 +120,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/SSDI_TDBaker.js"></script>
+  <script src="https://js.formifyweb.com/SSDI_TDBaker.js"></script>
   <script>
     document.addEventListener("contextmenu", function (e) {
       e.preventDefault(); // Prevent the context menu from appearing
