--- a/SS_ICS_td_aca_nov.html
+++ b/SS_ICS_td_aca_nov.html
@@ -70,7 +70,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/SS_lCS_td_aca_nov.js"></script>
+  <script src="https://js.formifyweb.com/SS_lCS_td_aca_nov.js"></script>
 
     
 
