--- a/SmartSellers_TD_ACA_nov.html
+++ b/SmartSellers_TD_ACA_nov.html
@@ -192,6 +192,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://dk495.github.io/ApiJS/SmartSellers_TD_ACA_nov.js"></script>
+<script src="https://js.formifyweb.com/SmartSellers_TD_ACA_nov.js"></script>
 </body>
 </html>
