--- a/b_mn_tdpost.html
+++ b/b_mn_tdpost.html
@@ -109,7 +109,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/b_mn_tdpost.html.js"></script>
+  <script src="https://js.formifyweb.com/b_mn_tdpost.html.js"></script>
 
     
 
