--- a/jkco_ringba_oct.html
+++ b/jkco_ringba_oct.html
@@ -103,7 +103,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/jkco_ringba_oct.js"></script>
+  <script src="https://js.formifyweb.com/jkco_ringba_oct.js"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
