--- a/provoice_azure_bathroom.html
+++ b/provoice_azure_bathroom.html
@@ -152,7 +152,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://dk495.github.io/ApiJS/provoice_azure_bathroom.js"></script>
+  <script src="https://js.formifyweb.com/provoice_azure_bathroom.js"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
