--- a/up_ret_mva.html
+++ b/up_ret_mva.html
@@ -206,6 +206,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://dk495.github.io/ApiJS/up_ret_mva.js"></script>
+    <script src="https://js.formifyweb.com/up_ret_mva.js"></script>
 </body>
 </html>
