--- a/kpro_tdpost_dec.html
+++ b/kpro_tdpost_dec.html
@@ -45,6 +45,10 @@
       <input type="text" class="form-control" id="caller_id" placeholder="10 digits US number" required>
     </div>
 </div>
+  <div class="form-group col-md-6">
+                <label for="landing_page">Zipcode</label>
+                <input type="text" class="form-control" id="zip"  placeholder="5 digit zipcode">
+            </div>
 </div>
 
 
