--- a/linktrust_pingpost_home_provoice.html
+++ b/linktrust_pingpost_home_provoice.html
@@ -77,19 +77,22 @@
             <div class="col-md-6">
                 <label for="Time_Frame" class="form-label">Time Frame</label>
                 <select name="Time_Frame" id="Time_Frame" class="form-select">
-                    <option value="">-- Select Time Frame --</option>
+                    <option value="Timing is Flexible">Timing is Flexible</option>
                     <option value="ASAP">ASAP</option>
-                    <option value="Within 6 months">Within 6 months</option>
-                    <option value="No timeframe">No timeframe</option>
+                    <option value="1-2 Weeks">1-2 Weeks</option>
+                    <option value="3-4 Weeks">3-4 Weeks</option>
+                    <option value="5-6 Weeks">5-6 Weeks</option>
+                    <option value="7-8 Weeks">7-8 Weeks</option>
+                    <option value="9-12 Weeks">9-12 Weeks</option>
                 </select>
             </div>
 
             <div class="col-md-6">
                 <label for="Project_Status" class="form-label">Project Status</label>
                 <select name="Project_Status" id="Project_Status" class="form-select">
-                    <option value="">-- Select Project Status --</option>
-                    <option value="Planning">Planning</option>
                     <option value="Ready to Hire">Ready to Hire</option>
+                    <option value="Planning and Budgeting">Planning and Budgeting</option>
+                    
                 </select>
             </div>
                <!-- Dropdown Fields -->
