--- a/autohome_tdpingpost_provoice16jan.html
+++ b/autohome_tdpingpost_provoice16jan.html
@@ -180,10 +180,8 @@
        <div class="col-md-4">
  <div class="form-group">
                     <label for="seeking_standard_coverage" class="form-label">Seeking Standard Coverage</label>
-                    <select id="seeking_standard_coverage" class="form-control" name="seeking_standard_coverage">
-                        <option value="true">Yes</option>
-                        <option value="false">No</option>
-                    </select>
+                    <input id="seeking_standard_coverage" class="form-control" name="seeking_standard_coverage" placeholder="Must be Standard (no SR-22 or state minimum coverage)">
+                      
                 </div>
  </div>
 
