--- a/provoice_azure_homeWarranty.html
+++ b/provoice_azure_homeWarranty.html
@@ -130,8 +130,8 @@
 <div class="row">
 <div class="col-md-6">
           <div class="form-group">
-<label for="home_​type">Home Type</label>
-<select class="form-control" name="home_​type" id="home_​type" required>
+<label for="home_type">Home Type</label>
+<select class="form-control" name="home_type" id="home_type" required>
 <option value="Single Family">Single Family</option>
     <option value="Condominium">Condominium</option>
     <option value="Townhouse">Townhouse</option>
@@ -145,8 +145,8 @@
 </div>
 <div class="col-md-6">
           <div class="form-group">
-<label for="square_​footage">Square ​Footage</label>
-<select class="form-control" name="square_​footage" id="square_​footage" required>
+<label for="square_footage">Square ​Footage</label>
+<select class="form-control" name="square_footage" id="square_footage" required>
 <option value="Less than 5,000">Less than 5,000</option>
   <option value="More than 5,000">More than 5,000</option>
   
