Update and rename JK&co_retRTB_med_jan25.html to JK&co_retRTB_autoinc_jan25.html

--- a/JK&co_retRTB_autoinc_jan25.html
+++ b/JK&co_retRTB_autoinc_jan25.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Jk&co MED Post form</title>
+  <title>Jk&co Auto Post form</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api Post Form (RTB-MED)</h2>
+    <h2 class="text-center">Api Post Form (RTB-AUTO)</h2>
   <form id="leadForm">
  <div class="row">
     <div class="col-md-4">
