Update and rename JK&co_retRTB_auto_jan25.html to JK&co_retRTB_medi_jan25.html

--- a/JK&co_retRTB_medi_jan25.html
+++ b/JK&co_retRTB_medi_jan25.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>JK&co RTB Auto</title>
+  <title>JK&co RTB Med</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
   <style>
@@ -37,7 +37,7 @@
 
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api Form (RTB-AUTO)</h2>
+    <h2 class="text-center">Api Form (RTB-MED)</h2>
    <form id="leadForm">
  
 <div class="row">
