--- a/JK&co_retRTB_autoinc_jan25.html
+++ b/JK&co_retRTB_autoinc_jan25.html
@@ -149,10 +149,16 @@
  </div>
     <div class="row">
 
-<div class="col-md-8">
+<div class="col-md-4">
 <div class="form-group">
  <label for="truecall_id">truecall_id</label>
          <input type="text" class="form-control" id="truecall_id" placeholder="leadid" required>
+   </div>
+  </div>
+      <div class="col-md-8">
+<div class="form-group">
+ <label for="jornaya_leadid">Jornaya Leadid/label>
+         <input type="text" class="form-control" id="jornaya_leadid" placeholder="Jornaya Token Here" required>
    </div>
   </div>
  </div>
