--- a/cypexmedia_auto_pingpost.html
+++ b/cypexmedia_auto_pingpost.html
@@ -140,6 +140,12 @@
          <input type="text" class="form-control" id="zip" placeholder="5 digit zipcode" required>
    </div>
   </div>
+  <div class="col-md-8">
+<div class="form-group">
+ <label for="jornaya_leadid">Jornaya Token</label>
+         <input type="text" class="form-control" id="jornaya_leadid" placeholder="Jornaya Token" required>
+   </div>
+  </div>
  </div>
 <div class="row">
  <div class="col-md-4">
