--- a/kpro_cor_fe_td_post.html
+++ b/kpro_cor_fe_td_post.html
@@ -58,20 +58,11 @@
 
 
   
-<button type="button" class="btn btn-primary" id="submitBtn" onclick="pingAPI()">Ping/Post</button>
+<button type="Submit" class="btn btn-primary" id="submitBtn" >Post</button>
     </form>
  <div id="alertContainer"></div>
 
-
-<!-- Display API response using Bootstrap alert -->
-<div class="alert alert-info mt-3" role="alert" id="apiResponse">
   
-</div>
-
-    
-
-
-   
 
 
 
