--- a/jk&co_autopost_td_3feb.html
+++ b/jk&co_autopost_td_3feb.html
@@ -185,13 +185,61 @@
    
 </div>
 <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
           <div class="form-group">
-            <label for="current_provider">Current Insurance Provider</label>
-            <input type="text" class="form-control" id="current_provider" placeholder="Insurance Company Name here" required>
+           <label for="current_provider">Current Insurance Provider</label>
+<select name="current_provider" class="form-control" id="current_provider">
+    <option value="aaa">AAA</option>
+    <option value="auto_insurance_specialists">Auto Insurance Specialists</option>
+    <option value="allstate">Allstate</option>
+    <option value="geico">GEICO</option>
+    <option value="direct_auto">Direct Auto</option>
+    <option value="farmers">Farmers</option>
+    <option value="nationwide">Nationwide</option>
+    <option value="plymouth_rock">Plymouth Rock</option>
+    <option value="progressive">Progressive</option>
+    <option value="state_farm">State Farm</option>
+    <option value="travelers">Travelers</option>
+    <option value="usaa">USAA</option>
+    <option value="liberty_mutual">Liberty Mutual</option>
+    <option value="amica">Amica</option>
+    <option value="kemper">Kemper</option>
+    <option value="21st_century">21st Century</option>
+    <option value="dairyland">Dairyland</option>
+    <option value="direct_general">Direct General</option>
+    <option value="elephant">Elephant</option>
+    <option value="esurance">Esurance</option>
+    <option value="infinity">Infinity</option>
+    <option value="mercury">Mercury</option>
+    <option value="metlife">MetLife</option>
+    <option value="safe_auto">Safe Auto</option>
+    <option value="the_general">The General</option>
+    <option value="other">Other</option>
+</select>
           </div>
-        </div>
+
+
+</div>
+   <div class="col-md-4">
+          <div class="form-group">
+<label for="sr22">Is the lead seeking an SR22 certificate?</label>
+<select name="sr22" class="form-control" id="sr22">
+ <option value="FALSE">No</option>
+    <option value="TRUE">Yes</option>
    
+</select>
+        </div>
+</div>
+   <div class="col-md-4">
+          <div class="form-group">
+<label for="state_minimum">Is the lead seeking state-minimum insurance?</label>
+<select name="state_minimum" class="form-control" id="state_minimum">
+<option value="FALSE">No</option>
+    <option value="TRUE">Yes</option>
+    
+</select>
+        </div>
+</div>
 </div>
 
 
