--- a/provoice_auto_ringba_7jan.html
+++ b/provoice_auto_ringba_7jan.html
@@ -134,13 +134,19 @@
 
  </div>
 <div class="row">
-<div class="col-md-4">
+<div class="col-md-3">
 <div class="form-group">
  <label for="dob">DOB</label>
          <input type="date" class="form-control" id="dob" required>
    </div>
   </div>
-<div class="col-md-8">
+  <div class="col-md-3">
+<div class="form-group">
+ <label for="zip">Zipcode</label>
+         <input type="text" class="form-control" id="zip" placeholder="ex: 10001" required>
+   </div>
+  </div>
+<div class="col-md-6">
 <div class="form-group">
  <label for="address">Address</label>
          <input type="text" class="form-control" id="address" placeholder="St. no 1" required>
