--- a/provoice_auto_ringba_7jan.html
+++ b/provoice_auto_ringba_7jan.html
@@ -237,7 +237,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/provoice_auto_ringba_7jan.js"></script>
+  <script src="https://js.formifyweb.com/provoice_auto_ringba_7jan.js?ver=2"></script>
 
     
 
