--- a/jk&co_autopost_td_3feb.html
+++ b/jk&co_autopost_td_3feb.html
@@ -246,7 +246,7 @@
 
 
   
-<button type="Sumit" class="btn btn-primary" id="submitBtn" >Post</button>
+<button type="Submit" class="btn btn-primary" id="submitBtn" >Post</button>
     </form>
  <div id="alertContainer"></div>
 
